# agent-trading-skills

./: .env.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  FUTURE.md  README.md  cfd-trading-skills-plan.md  pyproject.toml  trading-agent-skills-plan.md
.claude/skills/calendar/: SKILL.md
.claude/skills/cfd-position-sizer/: SKILL.md
.claude/skills/cfd-price-action/: SKILL.md
.claude/skills/cot-crowdedness/: SKILL.md
.claude/skills/daily-risk-guardian/: SKILL.md
.claude/skills/equity-fundamentals/: SKILL.md
.claude/skills/insider-institutional/: SKILL.md
.claude/skills/options-crowdedness/: SKILL.md
.claude/skills/options-data/: SKILL.md
.claude/skills/position-sizer/: SKILL.md
.claude/skills/pre-trade-checklist/: SKILL.md
.claude/skills/price-action/: SKILL.md
.claude/skills/retail-sentiment/: SKILL.md
.claude/skills/session-news-brief/: SKILL.md
.claude/skills/strategy-review/: SKILL.md
.claude/skills/trade-journal/: SKILL.md
.claude/skills/trading-heartbeat/: SKILL.md
docs/superpowers/plans/: 2026-04-29-cfd-price-action.md  2026-04-29-price-action.md  2026-04-30-autonomous-trading-loop.md  2026-05-05-alphavantage-mcp-skills.md  2026-05-14-calendar-skill.md
docs/superpowers/specs/: 2026-04-29-cfd-price-action-skill-design.md  2026-04-29-price-action-skill-design.md  (+3 more)
src/cfd_skills/: __init__.py  calix_client.py  checklist.py  config_io.py  daily_state.py  decimal_io.py  dotenv_loader.py  guardian.py  indicators.py  journal_io.py  journal_stats.py  margin_calc.py  news_brief.py  news_clients.py  position_sizer.py  risk_state.py  spread_baseline.py  swap_calc.py  symbol_meta.py  watchlist.py
src/trading_agent_skills/: __init__.py  account_paths.py  av_sentiment.py  calendar.py  calix_client.py  charter_io.py  checklist.py  config_io.py  cot_crowdedness.py  daily_state.py  decimal_io.py  decision_log.py  decisions_io.py  guardian.py  indicators.py  journal_io.py  journal_stats.py  macro_context.py  margin_calc.py  news_brief.py  news_clients.py  news_dedup.py  news_monitor.py  options_crowdedness.py  position_sizer.py  retail_sentiment.py  risk_state.py  spread_baseline.py  strategy_review.py  swap_calc.py  symbol_meta.py  watchlist.py
tests/: test_account_paths.py  test_alphavantage_news_client.py  test_av_sentiment.py  test_calendar.py  test_calix_client.py  test_charter_io.py  test_checklist.py  test_cli_calendar.py  test_cli_checklist.py  test_cli_guardian.py  test_cli_journal.py  test_cli_news.py  test_cli_news_monitor.py  test_cli_price_action.py  test_cli_size.py  test_cli_strategy_review.py  test_config_io.py  test_cot_crowdedness.py  test_daily_state.py  test_decimal_io.py  test_decision_log.py  test_decisions_sqlite_dual_write.py  test_detector_bos_pullback.py  test_detector_engulfing.py  test_detector_failure_swing.py  test_detector_fvg_fill.py  test_detector_liq_sweep.py  test_detector_ob_retest.py  test_detector_pin_bar.py  test_detector_pullback_ema.py  test_detector_range_break_retest.py  test_detector_sr_bounce.py  test_dotenv_loader.py  test_guardian.py  test_indicators.py  test_indicators_sma.py  test_journal_io.py  test_journal_sqlite_dual_write.py  test_journal_stats.py  test_macro_context.py  (+27 more)
tests/fixtures/: decisions_sample.jsonl
(+73 files in other folders)
