[project]
name = "cfd-skills"
version = "0.1.0"
description = "Reasoning-layer Claude Code skills for CFD day trading on top of mt5-mcp."
authors = [{ name = "Vincent" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tomli-w>=1.0",   # config.toml writes (tomli-w writes; tomllib reads, stdlib in 3.11+)
    "httpx>=0.27",    # Calix HTTPS client
    "tzdata>=2024.1; sys_platform == 'win32'",  # zoneinfo IANA db on Windows
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
cfd-skills-size = "cfd_skills.cli.size:main"
cfd-skills-journal = "cfd_skills.cli.journal:main"
cfd-skills-guardian = "cfd_skills.cli.guardian:main"
cfd-skills-checklist = "cfd_skills.cli.checklist:main"
cfd-skills-news = "cfd_skills.cli.news:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cfd_skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
