[project]
name = "trading-agent-skills"
version = "0.1.0"
description = "Reasoning-layer Claude Code skills for day trading on top of mt5-mcp."
authors = [{ name = "Vincent" }]
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "tomli-w>=1.0",   # config.toml writes (tomli-w writes; tomllib reads, stdlib in 3.11+)
    "httpx>=0.27",    # Calix HTTPS client
    "tzdata>=2024.1; sys_platform == 'win32'",  # zoneinfo IANA db on Windows
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
]

[project.scripts]
trading-agent-skills-size = "trading_agent_skills.cli.size:main"
trading-agent-skills-journal = "trading_agent_skills.cli.journal:main"
trading-agent-skills-guardian = "trading_agent_skills.cli.guardian:main"
trading-agent-skills-checklist = "trading_agent_skills.cli.checklist:main"
trading-agent-skills-news = "trading_agent_skills.cli.news:main"
trading-agent-skills-price-action = "trading_agent_skills.cli.price_action:main"
trading-agent-skills-strategy-review = "trading_agent_skills.cli.strategy_review:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/trading_agent_skills"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
pythonpath = ["src"]
